# copilot-updates

./: README.md  SKILL.md  config.yaml  create_pptx.py  fetch_articles.py  process_articles.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-updates.agent.md
.github/prompts/: fetch-copilot-news.prompt.md  summarize-deprecation.prompt.md  summarize-deprecations.prompt.md  summarize-improvement.prompt.md  summarize-improvements.prompt.md  summarize-new-release.prompt.md  summarize-new-releases.prompt.md  translate-content.prompt.md
.github/skills/copilot-updates/: SKILL.md
.github/skills/copilot-updates/references/: summarize-deprecations.md
references/: summarize-improvements.md  summarize-new-releases.md  translate-content.md
scripts/: config.yaml  create_pptx.py  fetch_articles.py  process_articles.py
